* Rusila Dreadblade
** New: Encounter start is now recognized when picking up a Barrel.
** New: Phase change has been implimented for when Heart of the Dread Fortune is destroyed.
** New: Personal Alert for both Cast and Channel of Dread Shot.

Hammerknell Fortress
* Estrode
** New: Added personal alert for Neddra's Grasp.

French Translations
* Updated!
----
v1.0.5

Engine
* Change: Some optimization work on how events are triggered.
* Change: Internal Unit detail data cache is updated slightly more frequently.

System
* New: /kbmversion now excepts and parses marco variable '%t' for target. '/kbmversion %t' as a macro will inspect your targets KBM Version.

Tank-Swap
* New: Tank-Swap can now track 2 debuffs.
* Change: Event.KingMolinator.System.TankSwap.Start(table = {DebuffList = table{[Debuff Name] = Index}, Enabled = bool})

Infernal Dawn
* Muglak
** New: Added an alert for Brilliant Inferno.
** New: Added a timer for the first Brilliant Inferno.
** New: Added timers for each Brilliant Inferno after the first.
* Maklamos The Scryer
** New: Added a secondary debuff tracker to Tank-Swap for Weakness.

Master Mode Dungeons
* Darkening Deeps
** Alchemist Braxtepel
*** New: Added UID for Squersh. If this encounter was triggered via Squersh it would not initiate correctly.
** Emissary Villizar
*** New: Added UID for this Boss for faster encounter matching, and future proofing.

Dictionary Entries
* New: Mechanic Spy Anchor, Tank-Swap Anchor, Phases & Objectvies Anchor and Timer Anchor.
* New: Global Castbar
* New: Plug-In tab
* New: !! Enraged !! Text

Russian Translations
* Updated.

French Translations
* Fixes.

----
v1.0.4

URGENT FIX (if you're running ID)
* Maklamos the Scryer
** Removed: Command which was accidentally left in from new alpha. (would cause instant error)
----
v1.0.3

System
* Messages
** New: KBM will post your version to guild members when logging in an alert anyone who has an old version.