@@ -17,7 +17,7 @@ local MOD = {
 	Instance = Instance.Name,
 	InstanceObj = Instance,
 	TimeoutOverride = false,
-	Timeout = 60,
+	Timeout = 80,
 	HasPhases = true,
 	Lang = {},
 	ID = "Twyl",
